<resources>
    <string name="app_name">Filmoteca</string>
    <string name="go_website">Ir al sitio web</string>
    <string name="get_support">Obtener soporte</string>
    <string name="go_back">Volver</string>
    <string name="madeBy">Creada por Dmitry Romanyutenko</string>
    <string name="no_func">Funcionalidad sin implementar</string>
    <string name="see_film_a">Ver pelicula A</string>
    <string name="see_film_b">Ver pelicula B</string>
    <string name="about">Acerca de</string>
    <string name="film_data">Datos de la pelicula</string>
    <string name="see_rel_film">Ver pelicula relacionada</string>
    <string name="edit_film">Editar pelicula</string>
    <string name="go_back_main">Volver a la principal</string>
    <string name="editing_film">Editando pelicula</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="how_send_email">Como enviar el correo:</string>
    <string name="succ_save">Ha sido guardado con exito</string>
    <string name="succ_canc">Ha sido cancelado con exito</string>
    <string name="film_name">Nombre de la pelicula</string>
    <string name="raf">Regreso al futuro</string>
    <string name="film_director">Director:</string>
    <string name="dRZ">Robert Zemeckis</string>
    <string name="year">Año:</string>
    <string name="year1985">1985</string>
    <string name="stats">Bluray, Sci-Fi</string>
    <string name="see_imdb">Ver en IMDB</string>
    <string name="ext_version">Versión extendida</string>
    <string name="take_picture">Captura fotografía</string>
    <string name="select_image">Selecciona imagen</string>
    <string name="film_title">Título de la pelicula</string>
    <string name="film_director_name">Nombre del director</string>
    <string name="link_imdb">Enlace a IMDB</string>
    <string name="sciFi">Sci-Fi</string>
    <string name="dvd">DVD</string>
    <string name="comments">Comentarios</string>
    <string name="select_gender">Genero</string>
    <string name="select_format">Formato</string>
    <string name="add_film">Añadir película</string>
    <string name="selected">Seleccionados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>