<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:parentActivityName="FilmListAcitivty"
    tools:context=".FilmDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/filmImageIV"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription=""
                    app:srcCompat="@drawable/ic_launcher_foreground">
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/filmDataTextTexView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/film_name"
                    android:textSize="15dp"></TextView>
                <TextView
                    android:id="@+id/directorTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/film_director"
                    android:textSize="15dp">
                </TextView>
                <TextView
                    android:id="@+id/dRZTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dRZ"
                    android:textSize="15dp">
                </TextView>
                <TextView
                    android:id="@+id/yearTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textSize="15dp">
                </TextView>
                <TextView
                    android:id="@+id/year1985TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year1985"
                    android:textSize="15dp">
                </TextView>
                <TextView
                    android:id="@+id/genreTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats"
                    android:textSize="15dp">
                </TextView>
                <TextView
                    android:id="@+id/formatTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats"
                    android:textSize="15dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>